# A-comparison-of-metabolic-labeling-and-statistical-methods-to-infer-genome-wide-dynamics-of-RNA

./: .gitignore  README.md
index/: INFO
pulseRTc/: MANIFEST.in  README.md  makefile  requirements.txt  setup.cfg
pulseRTc/pulser/: fit_rtc.R  fit_std.R  prep.R  utils.R
pulseRTc/results/ercc/: data  pulsecis-0-1-2-4-8.rds  pulsecis-0-1-2.rds  pulsecis-0-2-4.rds  pulsecis-0-4-8.rds  pulsefit-0-1-2-4-8.rds  pulsefit-0-1-2.rds  pulsefit-0-2-4.rds  pulsefit-0-4-8.rds
pulseRTc/results/slam/: pulsecis-0-1-2-4-8.rds  pulsecis-0-1-2.rds  pulsecis-0-2-4.rds  pulsecis-0-4-8.rds  pulsefit-0-1-2-4-8.rds  pulsefit-0-1-2.rds  pulsefit-0-2-4.rds  pulsefit-0-4-8.rds
pulseRTc/results/std/: pulsecis-0-1-2-4-8.rds  pulsecis-0-1-2.rds  pulsecis-0-2-4.rds  pulsecis-0-4-8.rds  pulsefit-0-1-2-4-8.rds  pulsefit-0-1-2.rds  pulsefit-0-2-4.rds  pulsefit-0-4-8.rds
pulseRTc/results/tls/: pulsecis-0-1-2-4-8.rds  pulsecis-0-1-2.rds  pulsecis-0-2-4.rds  pulsecis-0-4-8.rds  pulsefit-0-1-2-4-8.rds  pulsefit-0-1-2.rds  pulsefit-0-2-4.rds  pulsefit-0-4-8.rds
pulseRTc/results/tuc/: pulsecis-0-1-2-4-8.rds  pulsecis-0-1-2.rds  pulsecis-0-2-4.rds  pulsecis-0-4-8.rds  pulsefit-0-1-2-4-8.rds  pulsefit-0-1-2.rds  pulsefit-0-2-4.rds  pulsefit-0-4-8.rds
pulseRTc/run/: SAMPLELIST.TXT  markdups  slam.yaml  sortnrename  tls.yaml  tuc.yaml
pulseRTc/workflow/mapping/: INFO
pulseRTc/workflow/mismatches/: plot_mismatches.R
pulseRTc/workflow/tables/: slam-0h-1h-2h-4h-8h.counts.tsv.summary  std-0h-1h-2h-4h-8h.counts.tsv.summary  tls-0h-1h-2h-4h-8h.counts.tsv.summary  tuc-0h-1h-2h-4h-8h.counts.tsv.summary
(+117 files in other folders)
